@@ -330,7 +330,14 @@ void K3bCdrecordWriter::start()
     emit infoMessage( i18n("Unmounting medium"), INFO );
     K3b::unmount( burnDevice() );
   }
+
+  // block the device (including certain checks)
   k3bcore->blockDevice( burnDevice() );
+
+  // lock the device for good in this process since it will
+  // be opened in the growisofs process
+  burnDevice()->close();
+  burnDevice()->usageLock();
 
   if( !m_process->start( KProcess::NotifyOnExit, KProcess::All ) ) {
     // something went wrong when starting the program
@@ -651,6 +658,10 @@ void K3bCdrecordWriter::slotProcessExited( KProcess* p )
   delete d->cdTextFile;
   d->cdTextFile = 0;
 
+  // release the device within this process
+  burnDevice()->usageUnlock();
+
+  // unblock the device
   k3bcore->unblockDevice( burnDevice() );
 
   if( d->canceled ) {
